# KGCFP

00-数据集说明文档/: 中国人物画知识图谱数据结构v1_4.md
01-基础资源清单/: 02-数据库资源清单.csv  中国人物画古籍资源目录_v1.1.csv  历代人物画名单.csv
02-画家清单/: filter_valid_resources.py  test_db_performance.py  数据库访问性能测试报告.md
Docdb/: ACCESSIBLE_DB.xlsx  VERIFIED_ACCESSIBLE_RESOURCES_F.csv  中国人物画古籍资源目录_v1.xlsx  中国人物画知识图谱数据结构.md
backend/: import_to_neo4j.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/graph/: connection.py  queries.py
extraction/: pyproject.toml  test_extraction.py  test_output.json  test_output_m3.json
extraction/src/: __init__.py  extractor.py  parser.py  schema.py
frontend/: index.html  package-lock.json  package.json
nametest/: README_export_db.md  ancient_text_works_extracted.csv  check_wikisource_books.py  content_HuaJi_v1.html  content_HuaJi_v2.html  content_Tuhua_v1.html  content_Tuhua_v2.html  convert_docx.py  convert_xlsx.py  debug_ctext.py  enrich_and_filter_painters.py  enrich_from_cbdb.py  export_db_to_csv.py  extract_ancient_works.py  extract_works_from_book.py  find_properties.py  find_qids.py  find_shanghai_property.py  find_shanghai_property_v2.py  identify_figure_painters.py  inspect_book_content.py  query_ancient_texts.py  query_ctext_works.py  query_wikidata.py  song_dynasty_figure_painters.csv  song_dynasty_figure_painters_v2.csv  song_dynasty_painters.csv  song_dynasty_painters_enriched.csv  song_dynasty_painters_enriched_v2.csv  song_dynasty_painters_full.csv  song_dynasty_painters_works_ancient.csv  test_cbdb.py  (+2 more)
(+2 files in other folders)
